# NEL

./: .gitignore  CHANGELOG.md  README.md  environment.yml  member_composition.csv  nel_2025_env_full.yml  pyproject.toml
configs/: gp_config.json  gsgp_config.json  sample_config.json  slim_config.json
data/: sustavianfeed.xlsx
notebooks/: partial_delivery_1_GP.ipynb  partial_delivery_2_GSGP.ipynb  partial_delivery_3_SLIM.ipynb  partial_delivery_4_NN.ipynb
notebooks/log/PD1/: _gp_0.csv  _gp_0_settings.csv  _gp_1.csv  _gp_1_settings.csv  _gp_2.csv  _gp_2_settings.csv  _gp_3.csv  _gp_3_settings.csv  _gp_4.csv  _gp_4_settings.csv
notebooks/log/PD2/: _gsgp_0.csv  _gsgp_0_settings.csv  _gsgp_1.csv  _gsgp_1_settings.csv  _gsgp_2.csv  _gsgp_2_settings.csv  _gsgp_3.csv  _gsgp_3_settings.csv  _gsgp_4.csv  _gsgp_4_settings.csv
notebooks/log/PD3/: _slim_0.csv  _slim_0_settings.csv  _slim_1.csv  _slim_1_settings.csv  _slim_2.csv  _slim_2_settings.csv  _slim_3.csv  _slim_3_settings.csv  _slim_4.csv  _slim_4_settings.csv
notebooks/log/PD4/: training_history_Adam_Adam_fold1_172117_20250528-232913.csv  training_history_Adam_Adam_fold2_5e76da_20250528-233138.csv  training_history_Adam_Adam_fold3_13124d_20250528-233416.csv  (+12 more)
references/notebooks/: 1_practical_class_04_SLIM.ipynb  2_practical_class_04_SLIM.ipynb  practical_class_01_nested_cross_validation.ipynb  practical_class_02_GP.ipynb  practical_class_03_GSGP.ipynb
source/: plots.py
src/nel_utils/: __init__.py  caller.py  imputer.py  json_parser.py  nested_cv.py  plotter.py  selector.py
(+6 files in other folders)
